--- a/src/styles/_grockit.scss
+++ b/src/styles/_grockit.scss
@@ -32,7 +32,7 @@ body {
       position: relative;
       z-index: 100000;
       line-height: 20px;
-      background: #444;
+      background: #607D8B;
       color: #fff;
       font-size: 11px;
       font-weight: 600;
@@ -42,7 +42,7 @@ body {
     div {
       position: relative;
       z-index: 100000;
-      background: #282828;
+      background: #263238;
       border-bottom-right-radius: 5px;
       border-bottom-left-radius: 5px;
     } >
@@ -62,7 +62,7 @@ body {
   position: absolute;
   left: -40px;
   top: 0;
-  background: #444;
+  background: #607D8B;
   text-align: center;
   line-height: 40px;
   color: #fff;
@@ -78,10 +78,6 @@ body {
 
 #practice-settings.open #practice-settings-toggler {
   font-size: 16px;
-  color: #888;
-  &:hover {
-    color: #fff;
-  }
 }
 
 #practice-settings-list {
